--- a/About.html
+++ b/About.html
@@ -21,7 +21,7 @@
                 class="custom-logo" alt="" decoding="async" loading="lazy">
             <nav>
                 <ul>
-                    <li><a href="/indexhtml">Home</a></li>
+                    <li><a href="/index.html">Home</a></li>
                     <li><a href="/About.html">About</a></li>
                     <li><a href="/Work.html">Work</a></li>
                     <li><a href="/Gallery.html">Gallery</a></li>
