--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
             <div class="foot" id="foot2">
                 <h1>Contact Info</h1>
                 <ul>
-                    <li><a href=""> Phone No: +91 9629541108</a></li>
-                    <li><a href="">Email: amywatt@gmail.com</a></li>
+                    <li><a href=""> Phone No: +91 9629545931</a></li>
+                    <li><a href="">Email: iqyanmohammed@gmail.com</a></li>
                     <li><a href="">If you have something issue contact us.</a></li>
                     <li></li>
                 </ul>
