--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <h1>Contact Info</h1>
                 <ul>
                     <li><a href=""> Phone No: +91 9629545931</a></li>
-                    <li><a href="">Email: iqyanmohammed@gmail.com</a></li>
+                    <li><a href="">Email: iqyanmohammed1@gmail.com</a></li>
                     <li><a href="">If you have something issue contact us.</a></li>
                     <li></li>
                 </ul>
