--- a/About.html
+++ b/About.html
@@ -67,7 +67,7 @@
                 <h1>Contact Info</h1>
                 <ul>
                     <li><a href=""> Phone No: +91 9629541108</a></li>
-                    <li><a href="">Email: amywatt@gmail.com</a></li>
+                    <li><a href="">Email: iqyan@gmail.com</a></li>
                     <li><a href="">If you have something issue contact us.</a></li>
                     <li></li>
                 </ul>
